src/snapshots/purring_lib__parser__tests__expr_let.snap
---
source: src/parser.rs
expression: "p_expr(r\"\n            let\n                x = 1\n            in 2\n    \")"
---
15 of 15
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 11)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Let
     (3, 12)->(3, 15)
      LetBinding::Pattern
       Binder::Var
        Name
         (4, 16)->(4, 17)
       Expr::Number
        Number
         (4, 20)->(4, 21)
     Expr::Number
      Number
       (5, 15)->(5, 16)
===
