src/snapshots/purring_lib__parser__tests__expr_let_inline.snap
---
source: src/parser.rs
expression: "p_expr(r\"let x = 1 in 2\")"
---
15 of 15
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 11)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Let
     (2, 4)->(2, 7)
      LetBinding::Pattern
       Binder::Var
        Name
         (2, 8)->(2, 9)
       Expr::Number
        Number
         (2, 12)->(2, 13)
     Expr::Number
      Number
       (2, 17)->(2, 18)
===
