src/snapshots/purring_lib__parser__tests__expr_record.snap
---
source: src/parser.rs
expression: "p_expr(\"{ a, b: 1 }\")"
---
14 of 14
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 11)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Record
     (2, 4)->(2, 5)
      RecordLabelExpr::Pun
       Name
        (2, 6)->(2, 7)
      RecordLabelExpr::Field
       Label
        (2, 9)->(2, 10)
       Expr::Number
        Number
         (2, 12)->(2, 13)
     (2, 0)->(2, 0)
===
